[package]
name = "serde_hjson_test"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
path = "test.rs"

[dependencies]
serde_hjson = { path = "../..", default-features = false }

[features]
default = ["std"]
std = ["serde_hjson/std"]
alloc = ["serde_hjson/alloc"]
preserve_order = ["serde_hjson/preserve_order"]
arbitrary_precision = ["serde_hjson/arbitrary_precision"]
raw_value = ["serde_hjson/raw_value"]
unbounded_depth = ["serde_hjson/unbounded_depth"]
